# DesignPatterns

Creational/Factory/: CMakeLists.txt  HOW_TO_BUILD.txt  baseclass.cpp  baseclass.hpp  derivedclassfactory.hpp  derivedclassfactoryexception.hpp  derivedclassone.cpp  derivedclassone.hpp  derivedclasstwo.cpp  derivedclasstwo.hpp  main.cpp
